Fix footer alignment

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -6,10 +6,13 @@
 .Footer {
     background-color: var(--primary) !important;
     color: var(--enabled);
-    position: relative;
+    position: fixed;
     height: 4rem;
     display: flex;
     text-align: center;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .font-theme-light {
